text formatting done

--- a/HTML5 CSS3 and Bootstrap 4 Web Development/paragraph.html
+++ b/HTML5 CSS3 and Bootstrap 4 Web Development/paragraph.html
@@ -6,8 +6,8 @@
     <title>Paragraph</title>
 </head>
 <body>
-    <h1>This is a h1</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita facere soluta excepturi<br> perspiciatis ipsam commodi sapiente quos, nam, enim nulla natus nisi hic! Omnis et error velit, dolore unde adipisci?<br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, pariatur distinctio? Voluptatibus laborum dolor quibusdam quaerat non architecto! Laborum ipsa exercitationem temporibus velit rerum in officiis natus tenetur! Expedita illo vero iure fugiat, aliquid, velit earum similique eius repudiandae praesentium vitae eaque blanditiis. Voluptatibus explicabo modi ab animi dolor hic.</p>
+    <h1 style="text-align: center;  color:red;">This is a h1</h1>
+    <p style="color:blue; background-color:aqua; text-align:right;font-size:24px;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita facere soluta excepturi<br> perspiciatis ipsam commodi sapiente quos, nam, enim nulla natus nisi hic! Omnis et error velit, dolore unde adipisci?<br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, pariatur distinctio? Voluptatibus laborum dolor quibusdam quaerat non architecto! Laborum ipsa exercitationem temporibus velit rerum in officiis natus tenetur! Expedita illo vero iure fugiat, aliquid, velit earum similique eius repudiandae praesentium vitae eaque blanditiis. Voluptatibus explicabo modi ab animi dolor hic.</p>
     <p>New Paragraph</p>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita facere soluta excepturi<br> perspiciatis ipsam commodi sapiente quos, nam, enim nulla natus nisi hic! Omnis et error velit, dolore unde adipisci?<br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium, pariatur distinctio? Voluptatibus laborum dolor quibusdam quaerat non architecto! Laborum ipsa exercitationem temporibus velit rerum in officiis natus tenetur! Expedita illo vero iure fugiat, aliquid, velit earum similique eius repudiandae praesentium vitae eaque blanditiis. Voluptatibus explicabo modi ab animi dolor hic.</p>
