--- a/HTML5 CSS3 and Bootstrap 4 Web Development/text formating.html
+++ b/HTML5 CSS3 and Bootstrap 4 Web Development/text formating.html
@@ -14,5 +14,11 @@
         <em>Emphasis.</em>
         <strong>This is a strong.</strong>
     </p>
+    <p><q>This is quoted text.</q></p>
+    <blockquote cite="facebook.com">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis saepe eaque ea nostrum vitae tenetur, rem dolorem natus accusantium consequatur delectus eius error laudantium deserunt illum corporis totam vel sapiente!
+    </blockquote>
+    <p><abbr title="Hyper Text Markup Language">HTML</abbr> is the structure of any website.</p>
+    <p><address>Dhaka, Bangladesh.</address></p>
 </body>
 </html>
