--- a/HTML5 CSS3 and Bootstrap 4 Web Development/text formating.html
+++ b/HTML5 CSS3 and Bootstrap 4 Web Development/text formating.html
@@ -15,6 +15,7 @@
         <strong>This is a strong.</strong>
     </p>
     <p><q>This is quoted text.</q></p>
+    <!-- This is blockquote -->
     <blockquote cite="facebook.com">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis saepe eaque ea nostrum vitae tenetur, rem dolorem natus accusantium consequatur delectus eius error laudantium deserunt illum corporis totam vel sapiente!
     </blockquote>
