--- a/HTML5 CSS3 and Bootstrap 4 Web Development/index.html
+++ b/HTML5 CSS3 and Bootstrap 4 Web Development/index.html
@@ -9,5 +9,9 @@
     <h1>Hello World</h1>
     <h2>Hello World</h2>
     <h3>Hello World</h3>
+    <a href="newfile.html">Go to new file.</a>
+    <a href="newfile.html" target="_blank">Go to new file in new tab.</a>
+    <a href="https://youtube.com">Go to Youtube</a>
+    <a href="include/third.html">Go to third file.</a>
 </body>
 </html>
