--- a/HTML5 CSS3 and Bootstrap 4 Web Development/form input.html
+++ b/HTML5 CSS3 and Bootstrap 4 Web Development/form input.html
@@ -11,11 +11,12 @@
     <form action="">
         <label for="">Your UserName: </label>
         <input type="text" name="" id="" autofocus><br>
-        <label for="">Your Password:</label>
-        <input type="password" name="" id="">
+        <label for="">Your Password:</label>        <input type="password" name="" id="">
 <br>
         <label for="">Your Pin:</label>
         <input type="text" name="" id="" maxlength="5">
+        <br>
+        <input type="submit" value="Submit">
     </form>
 </body>
 </html>
