bootstra grid done

--- a/Section A Modern JavaScript Programming/DOCUMENT OBJECT MODEL/index.html
+++ b/Section A Modern JavaScript Programming/DOCUMENT OBJECT MODEL/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h3>Some Random Contents</h3>
+        <h3 id="document-title"
+        class="title-class">Some Random Contents</h3>
         <ol>
             <li>C++</li>
             <li>Java</li>
