bootstrap table done

--- a/HTML5 CSS3 and Bootstrap 4 Web Development/Part 3: Bootstrap/Learn Bootstrap/index.html
+++ b/HTML5 CSS3 and Bootstrap 4 Web Development/Part 3: Bootstrap/Learn Bootstrap/index.html
@@ -24,21 +24,86 @@
         <div class="col-3">this is first column</div>
         <div class="col">this is second column</div>
     </div>
-    <div class="row">
+    <div class="row bg-warning">
         <div class="col-4">this is first column</div>
         <div class="col-8">this is second column</div>
     </div>
-    <div class="row">
+    <div class="row bg-danger">
         <div class="col-7 p-3">this is first column</div>
         <div class="col-5 p-3">this is second column</div>
     </div>
     <div class="row">
-        <div class="col-8 p-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, tempore doloremque. Mollitia natus asperiores perferendis. Ducimus dolore velit nemo modi maiores consequuntur deserunt, eos perspiciatis laudantium temporibus nisi voluptate. Sequi fugit error similique unde id cumque! Harum aspernatur adipisci libero ducimus vitae doloribus dolorem officiis rerum voluptatem nihil doloremque, ad ratione voluptatum ipsa reiciendis similique eligendi impedit quo voluptas voluptates odit. Repudiandae obcaecati, aliquam illo cupiditate numquam praesentium pariatur ipsa quasi minus harum eveniet? Ullam reprehenderit voluptates magnam excepturi molestias porro accusantium similique, corrupti labore, recusandae officia amet nemo ipsam maxime unde est ducimus tempora facilis repellat consequuntur. Repellendus rerum aspernatur iste veniam nemo, eos neque nam rem aperiam odio est sed deleniti praesentium enim, ipsum reiciendis quasi veritatis blanditiis error? Labore sed possimus aut doloremque? Sapiente, error expedita unde repellendus nemo doloremque asperiores ratione minima sed labore vel iusto ex, eligendi sit et possimus rem deleniti, dicta maiores. Sapiente incidunt qui temporibus quae necessitatibus excepturi repellat, aut, laborum voluptatibus deleniti, culpa vel similique ipsa quam quaerat porro! Eius consequatur tempora totam harum. Explicabo ut, aliquid et eum fuga sunt dicta eos voluptatum aliquam aspernatur amet nemo asperiores modi praesentium dolorem ullam nisi quibusdam excepturi. Voluptates velit modi a laudantium dolores ratione corporis aspernatur id cumque soluta vero perferendis aperiam nisi, vel voluptatem sequi ex illum doloremque reiciendis sunt expedita ipsum molestias! Blanditiis et, doloribus deserunt ipsa nostrum illum alias possimus ipsam perspiciatis placeat ullam quod consequuntur illo, voluptate dolores nisi commodi neque explicabo corporis. Sunt deleniti consequuntur delectus iste?</div>
-        <div class="col-4 p-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum repellat iste porro reprehenderit aut, cumque saepe quaerat. Dignissimos iste earum laborum exercitationem ipsam aspernatur numquam consequuntur id, est magni blanditiis vitae saepe magnam distinctio accusantium maxime illo quas rerum? Tempora, ad. Est vero maiores error. Cupiditate reprehenderit sunt inventore quidem illum quaerat aperiam est cum quis, natus expedita placeat in delectus voluptatum veritatis quo nemo, totam dicta nobis, qui nesciunt aliquid libero. Et sed voluptatibus neque exercitationem ut totam ad nemo atque dolores eveniet quibusdam est facere eligendi harum doloremque iusto fugit labore voluptate modi laborum, molestias ducimus quisquam illum.</div>
+        <div class="col-8 col-sm-12 p-3 bg-primary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, tempore doloremque. Mollitia natus asperiores perferendis. Ducimus dolore velit nemo modi maiores consequuntur deserunt, eos perspiciatis laudantium temporibus nisi voluptate. Sequi fugit error similique unde id cumque! Harum aspernatur adipisci libero ducimus vitae doloribus dolorem officiis rerum voluptatem nihil doloremque, ad ratione voluptatum ipsa reiciendis similique eligendi impedit quo voluptas voluptates odit. Repudiandae obcaecati, aliquam illo cupiditate numquam praesentium pariatur ipsa quasi minus harum eveniet? Ullam reprehenderit voluptates magnam excepturi molestias porro accusantium similique, corrupti labore, recusandae officia amet nemo ipsam maxime unde est ducimus tempora facilis repellat consequuntur. Repellendus rerum aspernatur iste veniam nemo, eos neque nam rem aperiam odio est sed deleniti praesentium enim, ipsum reiciendis quasi veritatis blanditiis error? Labore sed possimus aut doloremque? Sapiente, error expedita unde repellendus nemo doloremque asperiores ratione minima sed labore vel iusto ex, eligendi sit et possimus rem deleniti, dicta maiores. Sapiente incidunt qui temporibus quae necessitatibus excepturi repellat, aut, laborum voluptatibus deleniti, culpa vel similique ipsa quam quaerat porro! Eius consequatur tempora totam harum. Explicabo ut, aliquid et eum fuga sunt dicta eos voluptatum aliquam aspernatur amet nemo asperiores modi praesentium dolorem ullam nisi quibusdam excepturi. Voluptates velit modi a laudantium dolores ratione corporis aspernatur id cumque soluta vero perferendis aperiam nisi, vel voluptatem sequi ex illum doloremque reiciendis sunt expedita ipsum molestias! Blanditiis et, doloribus deserunt ipsa nostrum illum alias possimus ipsam perspiciatis placeat ullam quod consequuntur illo, voluptate dolores nisi commodi neque explicabo corporis. Sunt deleniti consequuntur delectus iste?</div>
+        <div class="col-4 col-sm-12 p-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum repellat iste porro reprehenderit aut, cumque saepe quaerat. Dignissimos iste earum laborum exercitationem ipsam aspernatur numquam consequuntur id, est magni blanditiis vitae saepe magnam distinctio accusantium maxime illo quas rerum? Tempora, ad. Est vero maiores error. Cupiditate reprehenderit sunt inventore quidem illum quaerat aperiam est cum quis, natus expedita placeat in delectus voluptatum veritatis quo nemo, totam dicta nobis, qui nesciunt aliquid libero. Et sed voluptatibus neque exercitationem ut totam ad nemo atque dolores eveniet quibusdam est facere eligendi harum doloremque iusto fugit labore voluptate modi laborum, molestias ducimus quisquam illum.</div>
     </div>
+
+
 </div>
 
-
+<!-- this is a table section -->
+<div class="container mb-5">
+    <table class="table mb-3">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
+      
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
+</div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
