Image responsive done

--- a/HTML5 CSS3 and Bootstrap 4 Web Development/Part 3: Bootstrap/Learn Bootstrap/index.html
+++ b/HTML5 CSS3 and Bootstrap 4 Web Development/Part 3: Bootstrap/Learn Bootstrap/index.html
@@ -104,6 +104,19 @@
         </tbody>
       </table>
 </div>
+<!-- this is image section -->
+<div class="container">
+
+    <div class="row">
+        <div class="col">
+            <img src="img/1_mk1-6aYaf_Bes1E3Imhc0A.jpeg" alt=""
+            class="img-fluid">
+        </div>
+        <div class="col">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem exercitationem ipsam ab nobis quisquam dolor reprehenderit dignissimos voluptatibus excepturi illo blanditiis natus, reiciendis dicta quod nisi, dolore est a esse ea quae quidem optio minima. Beatae mollitia aspernatur officia eius nostrum nam dolorem deleniti sequi repellat ea. Deserunt libero nesciunt debitis, unde, iste ad vitae sed harum error dignissimos reprehenderit cum labore reiciendis cumque ex. Itaque vitae fugit cumque quisquam impedit sequi exercitationem id. Cum aperiam dicta libero iusto quae? Praesentium architecto error adipisci illum necessitatibus suscipit quidem harum deserunt maxime nostrum corrupti, repudiandae provident ab doloribus incidunt aut autem enim! Recusandae exercitationem distinctio quaerat totam beatae reiciendis odio sit tempora amet nemo! Suscipit odio vero provident inventore. Eaque laborum perspiciatis laboriosam odit, atque beatae architecto ipsam nisi natus! Laboriosam quae ducimus maiores sed velit sequi nulla impedit fugiat, eum ex itaque tempora nemo commodi quasi nobis, sunt quidem tenetur explicabo at dolore. Quod aspernatur illum earum incidunt, soluta, accusantium omnis dolor molestiae nam inventore maxime repellat nisi, repellendus minus blanditiis et? Praesentium eos perspiciatis mollitia ut odio quibusdam magni quisquam perferendis sapiente delectus deleniti veritatis, laudantium blanditiis placeat enim corrupti sequi assumenda omnis aut aspernatur quia? Nulla, deleniti rem?
+        </div>
+    </div>
+</div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
