--- a/HTML5 CSS3 and Bootstrap 4 Web Development/Part 3: Bootstrap/Learn Bootstrap/index.html
+++ b/HTML5 CSS3 and Bootstrap 4 Web Development/Part 3: Bootstrap/Learn Bootstrap/index.html
@@ -1,48 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learn Bootstrap</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
 
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-<div class="container">
-    <div class="row">
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
         <div class="col">this is first column</div>
         <div class="col">this is second column</div>
-    </div>
-    <div class="row">
+      </div>
+      <div class="row">
         <div class="col-1">this is first column</div>
         <div class="col">this is second column</div>
-    </div>
+      </div>
 
-    <div class="row">
+      <div class="row">
         <div class="col-3">this is first column</div>
         <div class="col">this is second column</div>
-    </div>
-    <div class="row bg-warning">
+      </div>
+      <div class="row bg-warning">
         <div class="col-4">this is first column</div>
         <div class="col-8">this is second column</div>
-    </div>
-    <div class="row bg-danger">
+      </div>
+      <div class="row bg-danger">
         <div class="col-7 p-3">this is first column</div>
         <div class="col-5 p-3">this is second column</div>
+      </div>
+      <div class="row">
+        <div class="col-8 col-sm-12 p-3 bg-primary">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia,
+          tempore doloremque. Mollitia natus asperiores perferendis. Ducimus
+          dolore velit nemo modi maiores consequuntur deserunt, eos perspiciatis
+          laudantium temporibus nisi voluptate. Sequi fugit error similique unde
+          id cumque! Harum aspernatur adipisci libero ducimus vitae doloribus
+          dolorem officiis rerum voluptatem nihil doloremque, ad ratione
+          voluptatum ipsa reiciendis similique eligendi impedit quo voluptas
+          voluptates odit. Repudiandae obcaecati, aliquam illo cupiditate
+          numquam praesentium pariatur ipsa quasi minus harum eveniet? Ullam
+          reprehenderit voluptates magnam excepturi molestias porro accusantium
+          similique, corrupti labore, recusandae officia amet nemo ipsam maxime
+          unde est ducimus tempora facilis repellat consequuntur. Repellendus
+          rerum aspernatur iste veniam nemo, eos neque nam rem aperiam odio est
+          sed deleniti praesentium enim, ipsum reiciendis quasi veritatis
+          blanditiis error? Labore sed possimus aut doloremque? Sapiente, error
+          expedita unde repellendus nemo doloremque asperiores ratione minima
+          sed labore vel iusto ex, eligendi sit et possimus rem deleniti, dicta
+          maiores. Sapiente incidunt qui temporibus quae necessitatibus
+          excepturi repellat, aut, laborum voluptatibus deleniti, culpa vel
+          similique ipsa quam quaerat porro! Eius consequatur tempora totam
+          harum. Explicabo ut, aliquid et eum fuga sunt dicta eos voluptatum
+          aliquam aspernatur amet nemo asperiores modi praesentium dolorem ullam
+          nisi quibusdam excepturi. Voluptates velit modi a laudantium dolores
+          ratione corporis aspernatur id cumque soluta vero perferendis aperiam
+          nisi, vel voluptatem sequi ex illum doloremque reiciendis sunt
+          expedita ipsum molestias! Blanditiis et, doloribus deserunt ipsa
+          nostrum illum alias possimus ipsam perspiciatis placeat ullam quod
+          consequuntur illo, voluptate dolores nisi commodi neque explicabo
+          corporis. Sunt deleniti consequuntur delectus iste?
+        </div>
+        <div class="col-4 col-sm-12 p-3">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum
+          repellat iste porro reprehenderit aut, cumque saepe quaerat.
+          Dignissimos iste earum laborum exercitationem ipsam aspernatur numquam
+          consequuntur id, est magni blanditiis vitae saepe magnam distinctio
+          accusantium maxime illo quas rerum? Tempora, ad. Est vero maiores
+          error. Cupiditate reprehenderit sunt inventore quidem illum quaerat
+          aperiam est cum quis, natus expedita placeat in delectus voluptatum
+          veritatis quo nemo, totam dicta nobis, qui nesciunt aliquid libero. Et
+          sed voluptatibus neque exercitationem ut totam ad nemo atque dolores
+          eveniet quibusdam est facere eligendi harum doloremque iusto fugit
+          labore voluptate modi laborum, molestias ducimus quisquam illum.
+        </div>
+      </div>
     </div>
-    <div class="row">
-        <div class="col-8 col-sm-12 p-3 bg-primary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, tempore doloremque. Mollitia natus asperiores perferendis. Ducimus dolore velit nemo modi maiores consequuntur deserunt, eos perspiciatis laudantium temporibus nisi voluptate. Sequi fugit error similique unde id cumque! Harum aspernatur adipisci libero ducimus vitae doloribus dolorem officiis rerum voluptatem nihil doloremque, ad ratione voluptatum ipsa reiciendis similique eligendi impedit quo voluptas voluptates odit. Repudiandae obcaecati, aliquam illo cupiditate numquam praesentium pariatur ipsa quasi minus harum eveniet? Ullam reprehenderit voluptates magnam excepturi molestias porro accusantium similique, corrupti labore, recusandae officia amet nemo ipsam maxime unde est ducimus tempora facilis repellat consequuntur. Repellendus rerum aspernatur iste veniam nemo, eos neque nam rem aperiam odio est sed deleniti praesentium enim, ipsum reiciendis quasi veritatis blanditiis error? Labore sed possimus aut doloremque? Sapiente, error expedita unde repellendus nemo doloremque asperiores ratione minima sed labore vel iusto ex, eligendi sit et possimus rem deleniti, dicta maiores. Sapiente incidunt qui temporibus quae necessitatibus excepturi repellat, aut, laborum voluptatibus deleniti, culpa vel similique ipsa quam quaerat porro! Eius consequatur tempora totam harum. Explicabo ut, aliquid et eum fuga sunt dicta eos voluptatum aliquam aspernatur amet nemo asperiores modi praesentium dolorem ullam nisi quibusdam excepturi. Voluptates velit modi a laudantium dolores ratione corporis aspernatur id cumque soluta vero perferendis aperiam nisi, vel voluptatem sequi ex illum doloremque reiciendis sunt expedita ipsum molestias! Blanditiis et, doloribus deserunt ipsa nostrum illum alias possimus ipsam perspiciatis placeat ullam quod consequuntur illo, voluptate dolores nisi commodi neque explicabo corporis. Sunt deleniti consequuntur delectus iste?</div>
-        <div class="col-4 col-sm-12 p-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum repellat iste porro reprehenderit aut, cumque saepe quaerat. Dignissimos iste earum laborum exercitationem ipsam aspernatur numquam consequuntur id, est magni blanditiis vitae saepe magnam distinctio accusantium maxime illo quas rerum? Tempora, ad. Est vero maiores error. Cupiditate reprehenderit sunt inventore quidem illum quaerat aperiam est cum quis, natus expedita placeat in delectus voluptatum veritatis quo nemo, totam dicta nobis, qui nesciunt aliquid libero. Et sed voluptatibus neque exercitationem ut totam ad nemo atque dolores eveniet quibusdam est facere eligendi harum doloremque iusto fugit labore voluptate modi laborum, molestias ducimus quisquam illum.</div>
-    </div>
 
-
-</div>
-
-<!-- this is a table section -->
-<div class="container mb-5">
-    <table class="table mb-3">
+    <!-- this is a table section -->
+    <div class="container mb-5">
+      <table class="table mb-3">
         <thead class="thead-dark">
           <tr>
             <th scope="col">#</th>
@@ -72,7 +117,7 @@
           </tr>
         </tbody>
       </table>
-      
+
       <table class="table table-striped">
         <thead>
           <tr>
@@ -103,61 +148,130 @@
           </tr>
         </tbody>
       </table>
-</div>
-<!-- this is image section -->
-<div class="container">
-
-    <div class="row">
+    </div>
+    <!-- this is image section -->
+    <div class="container">
+      <div class="row">
         <div class="col">
-            <img src="img/1_mk1-6aYaf_Bes1E3Imhc0A.jpeg" alt=""
-            class="img-fluid">
+          <img
+            src="img/1_mk1-6aYaf_Bes1E3Imhc0A.jpeg"
+            alt=""
+            class="img-fluid"
+          />
         </div>
         <div class="col">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem exercitationem ipsam ab nobis quisquam dolor reprehenderit dignissimos voluptatibus excepturi illo blanditiis natus, reiciendis dicta quod nisi, dolore est a esse ea quae quidem optio minima. Beatae mollitia aspernatur officia eius nostrum nam dolorem deleniti sequi repellat ea. Deserunt libero nesciunt debitis, unde, iste ad vitae sed harum error dignissimos reprehenderit cum labore reiciendis cumque ex. Itaque vitae fugit cumque quisquam impedit sequi exercitationem id. Cum aperiam dicta libero iusto quae? Praesentium architecto error adipisci illum necessitatibus suscipit quidem harum deserunt maxime nostrum corrupti, repudiandae provident ab doloribus incidunt aut autem enim! Recusandae exercitationem distinctio quaerat totam beatae reiciendis odio sit tempora amet nemo! Suscipit odio vero provident inventore. Eaque laborum perspiciatis laboriosam odit, atque beatae architecto ipsam nisi natus! Laboriosam quae ducimus maiores sed velit sequi nulla impedit fugiat, eum ex itaque tempora nemo commodi quasi nobis, sunt quidem tenetur explicabo at dolore. Quod aspernatur illum earum incidunt, soluta, accusantium omnis dolor molestiae nam inventore maxime repellat nisi, repellendus minus blanditiis et? Praesentium eos perspiciatis mollitia ut odio quibusdam magni quisquam perferendis sapiente delectus deleniti veritatis, laudantium blanditiis placeat enim corrupti sequi assumenda omnis aut aspernatur quia? Nulla, deleniti rem?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+          exercitationem ipsam ab nobis quisquam dolor reprehenderit dignissimos
+          voluptatibus excepturi illo blanditiis natus, reiciendis dicta quod
+          nisi, dolore est a esse ea quae quidem optio minima. Beatae mollitia
+          aspernatur officia eius nostrum nam dolorem deleniti sequi repellat
+          ea. Deserunt libero nesciunt debitis, unde, iste ad vitae sed harum
+          error dignissimos reprehenderit cum labore reiciendis cumque ex.
+          Itaque vitae fugit cumque quisquam impedit sequi exercitationem id.
+          Cum aperiam dicta libero iusto quae? Praesentium architecto error
+          adipisci illum necessitatibus suscipit quidem harum deserunt maxime
+          nostrum corrupti, repudiandae provident ab doloribus incidunt aut
+          autem enim! Recusandae exercitationem distinctio quaerat totam beatae
+          reiciendis odio sit tempora amet nemo! Suscipit odio vero provident
+          inventore. Eaque laborum perspiciatis laboriosam odit, atque beatae
+          architecto ipsam nisi natus! Laboriosam quae ducimus maiores sed velit
+          sequi nulla impedit fugiat, eum ex itaque tempora nemo commodi quasi
+          nobis, sunt quidem tenetur explicabo at dolore. Quod aspernatur illum
+          earum incidunt, soluta, accusantium omnis dolor molestiae nam
+          inventore maxime repellat nisi, repellendus minus blanditiis et?
+          Praesentium eos perspiciatis mollitia ut odio quibusdam magni quisquam
+          perferendis sapiente delectus deleniti veritatis, laudantium
+          blanditiis placeat enim corrupti sequi assumenda omnis aut aspernatur
+          quia? Nulla, deleniti rem?
         </div>
+      </div>
     </div>
-</div>
 
-<!-- this is a jumbotron -->
+    <!-- this is a jumbotron -->
 
-<div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Fluid jumbotron</h1>
+        <p class="lead">
+          This is a modified jumbotron that occupies the entire horizontal space
+          of its parent.
+        </p>
+      </div>
+    </div>
+    <div class="jumbotron">
+      <div class="container">
+        <h1 class="display-4">Fluid jumbotron</h1>
+        <p class="lead">
+          This is a modified jumbotron that occupies the entire horizontal space
+          of its parent.
+        </p>
+      </div>
+    </div>
+
+    <div class="jumbotron">
+      <h1 class="display-4">Hello, world!</h1>
+      <p class="lead">
+        This is a simple hero unit, a simple jumbotron-style component for
+        calling extra attention to featured content or information.
+      </p>
+      <hr class="my-4" />
+      <p>
+        It uses utility classes for typography and spacing to space content out
+        within the larger container.
+      </p>
+      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    </div>
+
+    <!-- this is alert -->
     <div class="container">
-      <h1 class="display-4">Fluid jumbotron</h1>
-      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+      <div class="alert alert-success" role="alert">
+        <h4 class="alert-heading">Well done!</h4>
+        <p>
+          Aww yeah, you successfully read this important alert message. This
+          example text is going to run a bit longer so that you can see how
+          spacing within an alert works with this kind of content.
+        </p>
+        <hr />
+        <p class="mb-0">
+          Whenever you need to, be sure to use margin utilities to keep things
+          nice and tidy.
+        </p>
+      </div>
+      <div class="alert alert-danger" role="alert">
+        <h4 class="alert-heading">Error!</h4>
+        <p>
+          Aww yeah, you successfully read this important alert message. This
+          example text is going to run a bit longer so that you can see how
+          spacing within an alert works with this kind of content.
+        </p>
+        <hr />
+        <p class="mb-0">
+          Whenever you need to, be sure to use margin utilities to keep things
+          nice and tidy.
+        </p>
+      </div>
     </div>
-  </div>
-  <div class="jumbotron">
+
     <div class="container">
-      <h1 class="display-4">Fluid jumbotron</h1>
-      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-    </div>
-  </div>
+      <button type="" class="btn btn-success">This is simple button</button>
+      <button type="button" class="btn btn-outline-primary">This is simple button</button>
 
-  <div class="jumbotron">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </div>
 
-  <!-- this is alert -->
-  <div class="container">
-    <div class="alert alert-success" role="alert">
-      <h4 class="alert-heading">Well done!</h4>
-      <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
-      <hr>
-      <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
     </div>
-    <div class="alert alert-danger" role="alert">
-      <h4 class="alert-heading">Error!</h4>
-      <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
-      <hr>
-      <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
-    </div>
-  </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
