--- a/HTML5 CSS3 and Bootstrap 4 Web Development/Part 3: Bootstrap/Learn Bootstrap/index.html
+++ b/HTML5 CSS3 and Bootstrap 4 Web Development/Part 3: Bootstrap/Learn Bootstrap/index.html
@@ -258,6 +258,13 @@
 
 
     </div>
+
+    <!-- this is badge -->
+
+    <div class="container">
+<h1>This is heading and badge <span class="badge badge-primary">New</span></h1>
+
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
