--- a/HTML5 CSS3 and Bootstrap 4 Web Development/Part 3: Bootstrap/Learn Bootstrap/index.html
+++ b/HTML5 CSS3 and Bootstrap 4 Web Development/Part 3: Bootstrap/Learn Bootstrap/index.html
@@ -264,12 +264,15 @@
     <div class="container">
 <h1>This is heading and badge <span class="badge badge-primary">New</span></h1>
 <span class="badge badge-pill badge-danger">9</span>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
-</div>
+
     </div>
 
     <!-- this is progress bar -->
+<div class="container">
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+  </div>
+</div>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
