List group done

--- a/HTML5 CSS3 and Bootstrap 4 Web Development/Part 3: Bootstrap/Learn Bootstrap/spinner.html
+++ b/HTML5 CSS3 and Bootstrap 4 Web Development/Part 3: Bootstrap/Learn Bootstrap/spinner.html
@@ -14,10 +14,22 @@
 
 <div class="container">
     <br>
-    <div class="spinner-border text-danger" role="status">
+    <div class="spinner-border text-danger m-5" role="status">
         <span class="sr-only">Loading...</span>
       </div>
       
+</div>
+<!-- list group -->
+<div class="container">
+  <div class="list-group">
+    <a href="#" class="list-group-item list-group-item-action active">
+      Cras justo odio
+    </a>
+    <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+    <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+    <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+    <a href="#" class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">Vestibulum at eros</a>
+  </div>
 </div>
 
     <!-- Optional JavaScript -->
