Selecting dom multiple element done

--- a/Section A Modern JavaScript Programming/DOCUMENT OBJECT MODEL/Traversing/index.html
+++ b/Section A Modern JavaScript Programming/DOCUMENT OBJECT MODEL/Traversing/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <!-- <script src="script.js"></script> -->
-    <script src="dom_multi_element.js"></script>
+    <script src="traversing.js"></script>
 </body>
 
 </html>
